fixed strömsund img src

--- a/boende.html
+++ b/boende.html
@@ -50,7 +50,7 @@
         <br class="clear">
       </article>
       <article id="stromsund">
-        <img class="section-image" src="images/boende/Strömsund.jpg">
+        <img class="section-image" src="images/boende/strömsund.jpg">
     	  <div class="section-text">
           <h2>Strömsundshemmet</h2>
           <h5>Stugor</h5>
