fixed hamnköket img src

--- a/äta.html
+++ b/äta.html
@@ -52,7 +52,7 @@
     	  <br class="clear">
       </article>
       <article id="hamnköket">
-        <img class="section-image" src="images/äta/hamnköket.jpg">
+        <img class="section-image" src="images/äta/Hamnköket.jpg">
     	  <div class="section-text">
           <h2>Hamnköket</h2>
           <p>Hamnköket är en sommar restaurang där du får en smakupplevelse av ekologiska och närproducerad gourmetmat. Beställ för enskilda middager, affärsmiddager och festliga tillfällen från 6-40 personer.</p>
